--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,20 @@
 </head>
 
 <body>
+
+    <form>
+        <input type="checkbox" id="verbose" name="verbose">
+        <label for="verbose">Verbose</label>
+        <button type="submit" id="init">Init</button>
+    </form>
+
+    <form>
+        <button type="submit" id="run">Run</button>
+    </form>
+
+    <hr />
+
+    <pre id="outputArea"></pre>
 </body>
 
 </html>
