UI fix re labels

--- a/client/index.html
+++ b/client/index.html
@@ -8,16 +8,16 @@
 <body>
 
     <form>
+        <label for="maxThreads">Max Threads</label>
         <select id="maxThreads">
             <option>1</option>
             <option>2</option>
             <option>4</option>
             <option selected="selected">8</option>
         </select>
-        <label for="maxThreads">Verbose</label>
 
-        <input type="checkbox" id="verbose" name="verbose">
         <label for="verbose">Verbose</label>
+        <input type="checkbox" id="verbose" name="verbose">
         
         <button type="submit" id="init">Init</button>
     </form>
