--- a/client/index.html
+++ b/client/index.html
@@ -3,27 +3,33 @@
 
 <head>
     <title>Hamsters.js Experiments</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
 
     <form>
-        <label for="maxThreads">Max Threads</label>
-        <select id="maxThreads">
+        <div class="row">
+            <label for="maxThreads">Max Threads</label>
+            <select id="maxThreads">
             <option>1</option>
             <option>2</option>
             <option>4</option>
             <option selected="selected">8</option>
         </select>
 
-        <label for="verbose">Verbose</label>
-        <input type="checkbox" id="verbose" name="verbose">
-        
-        <button type="submit" id="init">Init</button>
+            <label for="verbose">Verbose</label>
+            <input type="checkbox" id="verbose" name="verbose">
+
+            <button type="submit" id="init">Init</button>
+        </div>
     </form>
 
     <form>
-        <button type="submit" id="run">Run</button>
+        <div class="row">
+            <button type="submit" id="run">Run</button>
+            <img class="hide" id="spinner" src="spinner.gif" alt="spinner">
+        </div>
     </form>
 
     <hr />
